--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.14",
+    "@angular/cdk": "11.2.9",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
+    "@angular/localize": "~11.2.10",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@bento/bento-ng": "^12.3.2",
+    "@ng-bootstrap/ng-bootstrap": "~9.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -27,6 +31,7 @@
     "@angular-devkit/build-angular": "~0.1102.18",
     "@angular/cli": "~11.2.19",
     "@angular/compiler-cli": "~11.2.14",
+    "@angular/localize": "^11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
